<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"
    android:layout_marginBottom="@dimen/vertical_margin"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textview_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/select_breed_instruction"
        android:textSize="@dimen/text_headline"
        tools:text="Show me a ..." />

    <Spinner
        android:id="@+id/breed_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_instruction"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/breed_spinner"
        android:layout_above="@+id/button_next"
        android:scaleType="fitCenter"/>

</RelativeLayout>